--- a/views/result.ejs
+++ b/views/result.ejs
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>ここは <%= title %> です</p>
-    <p>計算結果は <%= result %> です</p>
-  </body>
+
+<head>
+  <title><%= title %></title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+
+<body>
+  <h1><%= title %></h1>
+  <p>ここは <%= title %> です</p>
+  <p>計算結果は <%= result %> です</p>
+  <form id="form" method="GET" action="/">
+    <input type="submit" value="戻る">
+  </form>
+</body>
+
 </html>
